[package]
name = "rrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.193", features = [ "derive" ] }
chrono = { version = "0.4.19" }
textplots = "0.8"
rgb = "0.8"

