[package]
name = "rrain"
version = "0.1.0"
authors = ["James Peltey <jwpetley@gmail.com>"]
description = "A command line tool for getting the current weather from OpenWeatherMap"
homepage = "https://github.com/jwpetley/rrain"
documentation = "https://github.com/jwpetley/rrain"
repository = "https://github.com/jwpetley/rrain"
readme = "README.md"
keywords = ["weather", "cli", "openweathermap"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.193", features = [ "derive" ] }
chrono = { version = "0.4.19" }
textplots = "0.8"
rgb = "0.8"

